--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -44,7 +44,7 @@ const last_posts = posts.slice(0, 3);
             <div class="flex flex-col gap-2">
               <div class="mx-auto">
                 <div
-                  class="mb-2 mt-4 flex w-full gap-2 font-bold text-gray-500"
+                  class="mb-2 mt-4 flex w-full gap-2 font-bold text-gray-500 select-none"
                 >
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
