--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,15 +1,15 @@
 ---
 // Import the global.css file here so that it is included on
 // all pages through the use of the <BaseHead /> component.
-import '../styles/global.css';
+import "../styles/global.css";
 
 export interface Props {
-	title: string;
-	description: string;
-	image?: string;
+  title: string;
+  description: string;
+  image?: string;
 }
 
-const { title, description, image = '/social_img.png' } = Astro.props;
+const { title, description, image = "/social_img.png" } = Astro.props;
 ---
 
 <!-- Global Metadata -->
@@ -17,6 +17,7 @@ const { title, description, image = '/social_img.png' } = Astro.props;
 <meta name="viewport" content="width=device-width,initial-scale=1" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <meta name="generator" content={Astro.generator} />
+<meta name="theme-color" content="#0a0a0a" />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
