Fixes with bad image locations

--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -11,7 +11,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <div class="p-2">
     <HorizontalCard
       title="Karbonized"
-      img="/projects_imgs/karbonized.png"
+      img="/karbonized.png"
       desc="Crea diseños úicos con bloques personalizables de codigo, imágenes, QR, mockups y más"
       url="https://karbonized.onrender.com"
       badge="FOSS"
@@ -21,7 +21,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
     <HorizontalCard
       title="Prossa"
-      img="/projects_imgs/prossa.png"
+      img="/prossa.png"
       desc="LLeva tu bliblioteca contigo a cualquier lugar con Prossa, el lector de libros electrónicos web gratuito y de código abierto. Con estadísticas de lectura y una interfaz fácil de usar"
       url="https://yossthedev.github.io/prossa"
       badge="FOSS"
