--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -181,7 +181,7 @@ const posts = (await getCollection("blog")).sort(
 
           <HorizontalCard
             title="Karbonized"
-            img="/projects_imgs/karbonized.png"
+            img="/karbonized.png"
             desc="Crea diseños úicos con bloques personalizables de codigo, imágenes, QR, mockups y más"
             url="https://karbonized.onrender.com"
             badge="FOSS"
@@ -192,7 +192,7 @@ const posts = (await getCollection("blog")).sort(
 
           <HorizontalCard
             title="Prossa"
-            img="/projects_imgs/prossa.png"
+            img="/prossa.png"
             desc="LLeva tu bliblioteca contigo a cualquier lugar con Prossa, el lector de libros electrónicos web gratuito y de código abierto. Con estadísticas de lectura y una interfaz fácil de usar"
             url="https://yossthedev.github.io/prossa"
             badge="FOSS"
