New article and some improvements

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,7 +2,7 @@
 const today = new Date();
 ---
 
-<footer class="footer footer-center block mb-5 pt-10">
+<footer class="footer footer-center block mb-5 pt-10 select-none">
   <div class="pb-2">
     &copy; {today.getFullYear()} Yoannis Sánchez Soto
   </div>
