--- a/src/pages/support.astro
+++ b/src/pages/support.astro
@@ -3,7 +3,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 
 <BaseLayout title="Apóyame">
-  <div class="mb-8">
+  <div class="mb-8 select-none">
     <div class="text-3xl w-full font-bold mb-2">Apóyame</div>
 
     <p>
