--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,6 +13,7 @@ const {
   title = SITE_TITLE,
   description = SITE_DESCRIPTION,
   includeSidebar = true,
+  includeNewsBar = true,
 } = Astro.props;
 
 const posts = (await getCollection("blog")).sort(
@@ -33,62 +34,61 @@ const last_posts = posts.slice(0, 3);
       <div class="drawer-content flex flex-col">
         <Header title={SITE_TITLE} />
         <div class="flex flex-auto flex-col lg:flex-row">
+          <div id="breadcums"></div>
           <main class="flex flex-auto flex-col p-4 lg:p-6 lg:pt-10">
             <slot />
           </main>
 
           <!-- Latest Posts -->
-          <div
-            class="mx-6 my-6 flex h-fit flex-auto flex-col rounded-3xl bg-base-200 p-2 shadow-2xl lg:mr-2 lg:max-w-[14rem]"
-          >
-            <div class="flex flex-col gap-2">
-              <div class="mx-auto">
-                <div
-                  class="mb-2 mt-4 flex w-full gap-2 font-bold text-gray-500 select-none"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    class="icon icon-tabler icon-tabler-article my-auto"
-                    width="18"
-                    height="18"
-                    viewBox="0 0 24 24"
-                    stroke-width="2"
-                    stroke="currentColor"
-                    fill="none"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  >
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                    <path
-                      d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
-                    ></path>
-                    <path d="M7 8h10"></path>
-                    <path d="M7 12h10"></path>
-                    <path d="M7 16h10"></path>
-                  </svg>
-                  <p class="my-auto text-xs font-bold">Ùltimas Publicaciones</p>
+          {
+            includeNewsBar && (
+              <div class="mx-6 my-6 flex h-fit flex-auto flex-col rounded-3xl bg-base-200 p-2 shadow-2xl lg:mr-2 lg:max-w-[14rem]">
+                <div class="flex flex-col gap-2">
+                  <div class="mx-auto">
+                    <div class="mb-2 mt-4 flex w-full gap-2 font-bold text-gray-500 select-none">
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="icon icon-tabler icon-tabler-article my-auto"
+                        width="18"
+                        height="18"
+                        viewBox="0 0 24 24"
+                        stroke-width="2"
+                        stroke="currentColor"
+                        fill="none"
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                      >
+                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                        <path d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" />
+                        <path d="M7 8h10" />
+                        <path d="M7 12h10" />
+                        <path d="M7 16h10" />
+                      </svg>
+                      <p class="my-auto text-xs font-bold">
+                        Ùltimas Publicaciones
+                      </p>
+                    </div>
+                  </div>
                 </div>
+                {last_posts.map((post, index) => (
+                  <>
+                    <HorizontalCard
+                      title={post.data.title}
+                      img={post.data.heroImage}
+                      desc={post.data.description}
+                      url={"/blog/" + post.slug}
+                      target="_self"
+                      badge={post.data.badge}
+                      newsPanel={true}
+                    />
+                    {index != last_posts.length - 1 && (
+                      <divider class="mx-auto my-2 h-1 w-1 rounded-full bg-gray-600/20 p-1" />
+                    )}
+                  </>
+                ))}
               </div>
-            </div>
-            {
-              last_posts.map((post, index) => (
-                <>
-                  <HorizontalCard
-                    title={post.data.title}
-                    img={post.data.heroImage}
-                    desc={post.data.description}
-                    url={"/blog/" + post.slug}
-                    target="_self"
-                    badge={post.data.badge}
-                    newsPanel={true}
-                  />
-                  {index != last_posts.length - 1 && (
-                    <divider class="mx-auto my-2 h-1 w-1 rounded-full bg-gray-600/20 p-1" />
-                  )}
-                </>
-              ))
-            }
-          </div>
+            )
+          }
         </div>
         <Footer />
       </div>
