--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -5,7 +5,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 <BaseLayout title="Projects">
   <div>
-    <div class="text-3xl w-full font-bold mb-5">Proyectos</div>
+    <div class="text-3xl w-full font-bold mb-5 select-none">Proyectos</div>
   </div>
 
   <div class="p-2">
