--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -5,7 +5,9 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
 <BaseLayout title="Projects">
   <div>
-    <div class="text-3xl w-full font-bold mb-5">Services Header</div>
+    <div class="text-3xl w-full font-bold mb-5 select-none">
+      Services Header
+    </div>
   </div>
 
   <HorizontalCard
