--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -55,7 +55,7 @@ import { Image } from "@astrojs/image/components";
             <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
             <path d="M10 12h4v4h-4z"></path>
           </svg>
-          <p class="lg:hidden">Home</p>
+          <p class="lg:hidden">Inicio</p>
         </a>
       </div>
 
@@ -83,7 +83,7 @@ import { Image } from "@astrojs/image/components";
             <path d="M14 10l2 2l-2 2"></path>
             <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
           </svg>
-          <p class="lg:hidden">Projects</p>
+          <p class="lg:hidden">Proyectos</p>
         </a>
       </div>
 
@@ -199,7 +199,7 @@ import { Image } from "@astrojs/image/components";
             ></path>
             <path d="M3 7l9 6l9 -6"></path>
           </svg>
-          <p class="lg:hidden">Contact</p>
+          <p class="lg:hidden">Contacto</p>
         </a>
       </div>
     </div>
