--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -178,7 +178,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
           <HorizontalCard
             title="Karbonized"
             img="/karbonized.png"
-            desc="Crea diseños úicos con bloques personalizables de codigo, imágenes, QR, mockups y más"
+            desc="Crea diseños únicos con bloques personalizables de codigo, imágenes, QR, mockups y más"
             url="https://karbonized.onrender.com"
             badge="FOSS"
           />
