--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -12,7 +12,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
     <HorizontalCard
       title="Karbonized"
       img="/karbonized.png"
-      desc="Crea diseños úicos con bloques personalizables de codigo, imágenes, QR, mockups y más"
+      desc="Crea diseños únicos con bloques personalizables de codigo, imágenes, QR, mockups y más"
       url="https://karbonized.onrender.com"
       badge="FOSS"
     />
