Add Google Search

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -37,3 +37,9 @@ const { title, description, image = "/social_img.png" } = Astro.props;
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+<!-- Google Search -->
+<meta
+  name="google-site-verification"
+  content="cZ1VOfZb4f4fHFl_Ozr2PtlmmjfDYPgZXaL_tZLpRuA"
+/>
