Add Google Analytics

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,7 +27,23 @@ const last_posts = posts.slice(0, 3);
 <html lang="en" data-theme="lofi">
   <head>
     <BaseHead title={title} description={description} image={image} />
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      type="text/partytown"
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-X851WQC84E"
+    ></script><script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-X851WQC84E");
+    </script>
   </head>
+
   <body class="bg-base-100">
     <div class="drawer-mobile drawer text-white">
       <input id="my-drawer" type="checkbox" class="drawer-toggle" />
