New Post: Creando Bots de Poe en Python

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -16,7 +16,7 @@ import { Image } from "@astrojs/image/components";
 <BaseLayout title={title} description={description} image={heroImage}>
   <main class="md:flex md:justify-center">
     <article
-      class="prose-lg prose max-w-[750px] prose-strong:text-gray-200 prose-a:bg-[#f1a533] prose-img:mx-auto prose-img:rounded-xl prose-headings:text-gray-200 text-gray-400"
+      class="prose-lg prose max-w-[750px] marker:text-gray-800 prose-strong:text-gray-200 prose-a:bg-[#f1a533] prose-img:mx-auto prose-img:rounded-xl prose-headings:text-gray-200 text-gray-400"
     >
       {
         heroImage && (
