--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -9,6 +9,7 @@ import { Image } from "@astrojs/image/components";
   <div
     class="menu flex w-[20rem] cursor-default flex-col flex-nowrap overflow-y-auto bg-base-100 p-2 text-gray-800 lg:my-4 lg:w-20"
   >
+    <!-- Hero Image -->
     <div class="flex w-fit">
       <a rel="prefetch" class="lg:hidden" href="/">
         <div
@@ -21,7 +22,7 @@ import { Image } from "@astrojs/image/components";
               format="webp"
               width={300}
               height={300}
-              src="/profile2.png"
+              src="/profile.png"
               alt="Profile image"
             />
           </div>
@@ -29,94 +30,90 @@ import { Image } from "@astrojs/image/components";
       </a>
     </div>
 
+    <!-- Sidebar content here -->
+
+    <!-- Pages -->
     <div class="flex shrink grow gap-1 flex-col lg:gap-2 text-gray-200">
-      <!-- Sidebar content here -->
-      <div>
-        <a
-          rel="prefetch"
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
-          id="home"
-          href="/"
+      <a
+        rel="prefetch"
+        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
+        id="home"
+        href="/"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
-            <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
-            <path d="M10 12h4v4h-4z"></path>
-          </svg>
-          <p class="lg:hidden">Inicio</p>
-        </a>
-      </div>
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
+          <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
+          <path d="M10 12h4v4h-4z"></path>
+        </svg>
+        <p class="lg:hidden">Inicio</p>
+      </a>
 
-      <div>
-        <a
-          rel="prefetch"
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
-          id="projects"
-          href="/projects"
+      <a
+        rel="prefetch"
+        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
+        id="projects"
+        href="/projects"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path d="M10 14l-2 -2l2 -2"></path>
-            <path d="M14 10l2 2l-2 2"></path>
-            <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
-          </svg>
-          <p class="lg:hidden">Proyectos</p>
-        </a>
-      </div>
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M10 14l-2 -2l2 -2"></path>
+          <path d="M14 10l2 2l-2 2"></path>
+          <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
+        </svg>
+        <p class="lg:hidden">Proyectos</p>
+      </a>
 
-      <div>
-        <a
-          rel="prefetch"
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
-          id="blog"
-          href="/blog"
+      <a
+        rel="prefetch"
+        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
+        id="blog"
+        href="/blog"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path
-              d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
-            ></path>
-            <path d="M7 8h10"></path>
-            <path d="M7 12h10"></path>
-            <path d="M7 16h10"></path>
-          </svg>
-          <p class="lg:hidden">Blog</p>
-        </a>
-      </div>
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path
+            d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
+          ></path>
+          <path d="M7 8h10"></path>
+          <path d="M7 12h10"></path>
+          <path d="M7 16h10"></path>
+        </svg>
+        <p class="lg:hidden">Blog</p>
+      </a>
 
       <div class="hidden">
         <a
@@ -145,71 +142,94 @@ import { Image } from "@astrojs/image/components";
         </a>
       </div>
 
-      <div>
-        <a
-          rel="prefetch"
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
-          id="support"
-          href="/support"
+      <a
+        rel="prefetch"
+        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
+        id="support"
+        href="/support"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path
-              d="M3 14c.83 .642 2.077 1.017 3.5 1c1.423 .017 2.67 -.358 3.5 -1c.83 -.642 2.077 -1.017 3.5 -1c1.423 -.017 2.67 .358 3.5 1"
-            ></path>
-            <path d="M8 3a2.4 2.4 0 0 0 -1 2a2.4 2.4 0 0 0 1 2"></path>
-            <path d="M12 3a2.4 2.4 0 0 0 -1 2a2.4 2.4 0 0 0 1 2"></path>
-            <path d="M3 10h14v5a6 6 0 0 1 -6 6h-2a6 6 0 0 1 -6 -6v-5z"></path>
-            <path d="M16.746 16.726a3 3 0 1 0 .252 -5.555"></path>
-          </svg>
-          <p class="lg:hidden">Apóyame</p>
-        </a>
-      </div>
-      <div>
-        <a
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
-          href="mailto:yossthedev@gmail.com"
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path
+            d="M3 14c.83 .642 2.077 1.017 3.5 1c1.423 .017 2.67 -.358 3.5 -1c.83 -.642 2.077 -1.017 3.5 -1c1.423 -.017 2.67 .358 3.5 1"
+          ></path>
+          <path d="M8 3a2.4 2.4 0 0 0 -1 2a2.4 2.4 0 0 0 1 2"></path>
+          <path d="M12 3a2.4 2.4 0 0 0 -1 2a2.4 2.4 0 0 0 1 2"></path>
+          <path d="M3 10h14v5a6 6 0 0 1 -6 6h-2a6 6 0 0 1 -6 -6v-5z"></path>
+          <path d="M16.746 16.726a3 3 0 1 0 .252 -5.555"></path>
+        </svg>
+        <p class="lg:hidden">Apóyame</p>
+      </a>
+
+      <a
+        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
+        href="mailto:yossthedev@gmail.com"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
+          width="24"
+          height="24"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
         >
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-            width="24"
-            height="24"
-            viewBox="0 0 24 24"
-            stroke-width="2"
-            stroke="currentColor"
-            fill="none"
-            stroke-linecap="round"
-            stroke-linejoin="round"
-          >
-            <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-            <path
-              d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"
-            ></path>
-            <path d="M3 7l9 6l9 -6"></path>
-          </svg>
-          <p class="lg:hidden">Contacto</p>
-        </a>
-      </div>
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path
+            d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"
+          ></path>
+          <path d="M3 7l9 6l9 -6"></path>
+        </svg>
+        <p class="lg:hidden">Contacto</p>
+      </a>
     </div>
 
-    <divider class="mx-auto my-3 h-1 w-1 rounded-full bg-gray-600/10 p-1"
-    ></divider>
+    <div class="mx-auto my-3 h-1 w-1 rounded-full bg-gray-600/10 p-1"></div>
 
+    <!-- Social Networks -->
     <div
       class="social-icons my-2 flex gap-2 self-center px-4 text-gray-400 lg:flex-col lg:gap-8 lg:px-0"
     >
+      <!-- Telegram  -->
+      <a
+        href="https:/t.me/yossthedev"
+        target="_blank"
+        class="mx-3 lg:mx-auto"
+        aria-label="Telegram"
+        title="Telegram"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          class="icon icon-tabler icon-tabler-brand-telegram"
+          width="18"
+          height="18"
+          viewBox="0 0 24 24"
+          stroke-width="2"
+          stroke="currentColor"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"
+        >
+          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
+          <path d="M15 10l-4 4l6 6l4 -16l-18 7l4 2l2 6l3 -4"></path>
+        </svg>
+      </a>
+
+      <!-- Github  -->
       <a
         href="https://github.com/yossthedev"
         target="_blank"
@@ -235,6 +255,8 @@ import { Image } from "@astrojs/image/components";
           ></path>
         </svg>
       </a>
+
+      <!-- Twitter  -->
       <a
         href="https://twitter.com/yossthedev"
         target="_blank"
@@ -261,6 +283,7 @@ import { Image } from "@astrojs/image/components";
         </svg>
       </a>
 
+      <!-- LinkedIn  -->
       <a
         href="https://www.linkedin.com/in/yossthedev"
         target="_blank"
@@ -291,6 +314,7 @@ import { Image } from "@astrojs/image/components";
         </svg>
       </a>
 
+      <!-- RSS Feed  -->
       <a
         href="/rss.xml"
         target="_blank"
