Add Clouflare Analytics

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -42,8 +42,13 @@ const last_posts = posts.slice(0, 3);
 
       gtag("config", "G-X851WQC84E");
     </script>
-    
-<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "e06c78200d25473f9e64203047113ac7"}'></script><!-- End Cloudflare Web Analytics -->
+
+    <!-- Cloudflare Web Analytics -->
+    <script
+      defer
+      src="https://static.cloudflareinsights.com/beacon.min.js"
+      data-cf-beacon='{"token": "e06c78200d25473f9e64203047113ac7"}'
+    ></script><!-- End Cloudflare Web Analytics -->
   </head>
 
   <body class="bg-base-100">
