--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -34,7 +34,7 @@ import { Image } from "@astrojs/image/components";
         )
       }
       <div class="w-full grow">
-        <h1 class="poppins-bold text-xl font-bold">
+        <h2 class="text-xl font-bold">
           {title}
           {
             badge && (
@@ -43,7 +43,7 @@ import { Image } from "@astrojs/image/components";
               </div>
             )
           }
-        </h1>
+        </h2>
         <p class="text-1xl py-1">{desc}</p>
         <div class="card-actions justify-start">
           {
