--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -52,6 +52,10 @@ h1 {
   font-family: "Poppins-Font-Bold";
 }
 
+h2 {
+  font-family: "Poppins-Font-Bold";
+}
+
 .poppins-font {
   font-family: "Poppins-Font";
 }
@@ -69,10 +73,32 @@ h1 {
   }
 }
 .gradient {
-  background-image: linear-gradient(-45deg, #f1a533, #ff7139);
+  background-image: linear-gradient(-45deg, #2cd8d5, #8e37d7);
   background-size: 300% 100%;
   animation: gradient-bg 5s ease-in-out infinite;
 }
 
+@media (min-width: 768px) {
+  .hero-gradient {
+    background-image: linear-gradient(-45deg, #2cd8d5, #8e37d7);
+    background-size: 300% 100%;
+    animation: gradient-bg 5s ease-in-out infinite;
+  }
+}
 
+@keyframes bounce-scale {
+  0% {
+    scale: 80%;
+  }
+  50% {
+    scale: 100%;
+  }
 
+  100% {
+    scale: 80%;
+  }
+}
+
+.bounce-scale {
+  animation: bounce-scale 1s ease-in-out infinite;
+}
