--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -14,8 +14,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         class="skew-y-1 h-[36rem] lg:h-96 border-4 lg:border-0 border-primary -skew-x-1 lg:-skew-y-1 lg:skew-x-1 flex max-h-[38rem] flex-auto select-none flex-col overflow-hidden rounded-3xl bg-base-200 bg-no-repeat shadow-2xl transition-all lg:flex-row"
       >
         <!-- Hero Text -->
-        <div class="order-2 -mt-20 md:mt-0 flex flex-auto flex-col lg:order-1">
-          <div class="mx-auto my-auto w-fit lg:ml-auto lg:w-96">
+        <div class="order-2 h-fit lg:h-full flex flex-auto flex-col lg:order-1">
+          <div class="mx-auto lg:my-auto w-fit lg:ml-auto lg:w-96">
             <h1
               class="mt-2 whitespace-nowrap text-center text-3xl font-bold text-white lg:mt-0 lg:text-justify lg:text-7xl"
             >
@@ -131,7 +131,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         </div>
 
         <!-- Hero Image -->
-        <div class="order-1 flex p-2 flex-auto flex-col lg:order-2">
+        <div class="order-1 flex p-o lg:p-2 flex-auto flex-col lg:order-2">
           <div
             class="my-auto rounded-full bg-white p-6 mx-6 lg:mx-auto shadow-2xl lg:p-8 lg:shadow-primary lg:shadow-xs"
           >
