--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,10 @@ import BaseLayout from "../layouts/BaseLayout.astro";
   <div class="flex flex-auto flex-col gap-10 p-3 lg:p-1">
     <!-- Hero Panel -->
     <div
-      class="hero-gradient flex relative -skew-y-1 skew-x-1 lg:pt-10 lg:pb-10 lg:pl-10 rounded-3xl p-2 max-h-80 lg:mb-48 mb-60 lg:shadow-xl shadow-inner lg:shadow-primary/10"
+      class="hero-gradient flex relative -skew-y-3 skew-x-2 lg:pt-10 lg:pb-10 lg:pl-10 rounded-3xl p-2 max-h-80 lg:mb-40 mb-64 lg:shadow-xl shadow-inner lg:shadow-primary/10"
     >
       <div
-        class="skew-y-1 h-[36rem] lg:h-96 border-4 lg:border-0 border-primary -skew-x-1 lg:-skew-y-1 lg:skew-x-1 flex max-h-[38rem] flex-auto select-none flex-col overflow-hidden rounded-3xl bg-base-200 bg-no-repeat shadow-2xl transition-all lg:flex-row"
+        class="skew-y-1 h-[36rem] lg:h-96 portrait:shadow-primary portrait:shadow-xl border-4 lg:border-0 border-primary -skew-x-1 lg:-skew-y-1 lg:skew-x-1 flex max-h-[38rem] flex-auto select-none flex-col overflow-hidden rounded-3xl bg-base-200 bg-no-repeat shadow-2xl transition-all lg:flex-row"
       >
         <!-- Hero Text -->
         <div class="order-2 h-fit lg:h-full flex flex-auto flex-col lg:order-1">
@@ -133,7 +133,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         <!-- Hero Image -->
         <div class="order-1 flex p-o lg:p-2 flex-auto flex-col lg:order-2">
           <div
-            class="my-auto rounded-full bg-white p-6 mx-6 lg:mx-auto shadow-2xl lg:p-8 lg:shadow-primary lg:shadow-xs"
+            class="my-auto rounded-full bg-white p-4 mx-6 lg:mx-auto shadow-2xl lg:shadow-primary lg:shadow-xs"
           >
             <Image
               class="h-full w-full rounded-full"
