--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -202,13 +202,13 @@ import { Image } from "@astrojs/image/components";
 
     <!-- Social Networks -->
     <div
-      class="social-icons my-2 flex gap-2 self-center px-4 text-gray-400 lg:flex-col lg:gap-8 lg:px-0"
+      class="social-icons my-2 flex gap-2 self-center px-2 text-gray-400 lg:flex-col lg:gap-3 lg:px-0"
     >
       <!-- Telegram  -->
       <a
         href="https:/t.me/yossthedev"
         target="_blank"
-        class="mx-3 lg:mx-auto"
+        class="mx-3 lg:mx-auto hover:text-white hover:bg-[#269FDA] rounded-full p-2 hover:scale-105 transition-all"
         aria-label="Telegram"
         title="Telegram"
       >
@@ -233,7 +233,7 @@ import { Image } from "@astrojs/image/components";
       <a
         href="https://github.com/yossthedev"
         target="_blank"
-        class="mx-3 lg:mx-auto"
+        class="mx-3 lg:mx-auto hover:text-white hover:bg-[#222222] rounded-full p-2 hover:scale-105 transition-all"
         aria-label="Github"
         title="Github"
       >
@@ -260,13 +260,13 @@ import { Image } from "@astrojs/image/components";
       <a
         href="https://twitter.com/yossthedev"
         target="_blank"
-        class="mx-3 lg:mx-auto"
+        class="mx-3 lg:mx-auto hover:text-white hover:bg-[#1b1b1b] rounded-full p-2 hover:scale-105 transition-all"
         aria-label="Twitter"
         title="Twitter"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-brand-twitter"
+          class="icon icon-tabler icon-tabler-brand-x"
           width="18"
           height="18"
           viewBox="0 0 24 24"
@@ -277,9 +277,8 @@ import { Image } from "@astrojs/image/components";
           stroke-linejoin="round"
         >
           <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path
-            d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c0 -.249 1.51 -2.772 1.818 -4.013z"
-          ></path>
+          <path d="M4 4l11.733 16h4.267l-11.733 -16z"></path>
+          <path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772"></path>
         </svg>
       </a>
 
@@ -318,7 +317,7 @@ import { Image } from "@astrojs/image/components";
       <a
         href="/rss.xml"
         target="_blank"
-        class="mx-3 lg:mx-auto"
+        class="mx-3 lg:mx-auto hover:text-white hover:bg-[#fd8751] rounded-full p-2 hover:scale-105 transition-all"
         aria-label="RSS Feed"
         title="RSS Feed"
       >
