--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,6 +1,6 @@
 ---
 const { title, img, desc, url, badge, tags, target = "_blank" } = Astro.props;
-import { Image } from "@astrojs/image/components";
+import {Image} from "astro:assets"
 ---
 
 <div class="md:w-1/3 w-full">
@@ -9,7 +9,6 @@ import { Image } from "@astrojs/image/components";
       class="card bg-base-100 transition ease-in-out hover:shadow-xl mx-6 my-2 hover:scale-[102%]"
     >
       <Image
-        aspectRatio="16:9"
         width={750}
         format="webp"
         src={img}
