--- a/src/components/HorizontalCard.astro
+++ b/src/components/HorizontalCard.astro
@@ -9,7 +9,7 @@ const {
   target = "_blank",
   newsPanel,
 } = Astro.props;
-import { Image } from "@astrojs/image/components";
+import {Image} from "astro:assets"
 ---
 
 <div
@@ -25,8 +25,8 @@ import { Image } from "@astrojs/image/components";
         img && (
           <Image
             src={img}
-            aspectRatio="16:9"
-            width={750}
+            height={250}
+            width={450}
             format="webp"
             alt={title}
             class="flex w-full max-w-full rounded-xl md:max-w-[13rem]"
