--- a/src/layouts/StoreItemLayout.astro
+++ b/src/layouts/StoreItemLayout.astro
@@ -21,7 +21,7 @@ const {
 
 dayjs.extend(localizedFormat);
 const displayDate = dayjs(updatedDate).format("ll");
-import { Image } from "@astrojs/image/components";
+import {Image} from "astro:assets"
 ---
 
 <BaseLayout title={title} description={description} image={heroImage}>
