--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -7,7 +7,7 @@ import {Image} from "astro:assets"
 >
   <label for="my-drawer" class="drawer-overlay bg-base-200/5"></label>
   <div
-    class="menu flex w-[20rem] cursor-default flex-col flex-nowrap overflow-y-auto bg-base-100 p-2 text-gray-800 lg:my-4 lg:w-20"
+    class="menu flex w-[20rem] lg:bg-transparent cursor-default flex-col flex-nowrap overflow-y-auto bg-base-100 p-2 text-gray-800 lg:my-4 lg:w-20"
   >
     <!-- Hero Image -->
     <div class="flex w-fit">
@@ -35,27 +35,11 @@ import {Image} from "astro:assets"
     <div class="flex shrink grow gap-1 flex-col lg:gap-2 text-gray-200">
       <a
         rel="prefetch"
-        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
+        class="flex gap-2 rounded-2xl py-2 px-1 transition-all hover:bg-neutral lg:rounded-xl lg:hover:scale-105"
         id="home"
         href="/"
       >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path d="M5 12l-2 0l9 -9l9 9l-2 0"></path>
-          <path d="M5 12v7a2 2 0 0 0 2 2h10a2 2 0 0 0 2 -2v-7"></path>
-          <path d="M10 12h4v4h-4z"></path>
-        </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" height="18" width="18" viewBox="0 0 18 18"><title>house 5</title><g fill="#212121" class="nc-icon-wrapper"><path d="M13.75,6.019c-.414,0-.75-.336-.75-.75V2.75c0-.414,.336-.75,.75-.75s.75,.336,.75,.75v2.519c0,.414-.336,.75-.75,.75Z" data-color="color-2"></path><path d="M15.792,5.848L9.446,1.147c-.265-.196-.628-.196-.893,0L2.208,5.848c-.444,.329-.708,.854-.708,1.406v6.496c0,1.517,1.233,2.75,2.75,2.75h.75v-5c0-.828,.672-1.5,1.5-1.5s1.5,.672,1.5,1.5v5h5.75c1.517,0,2.75-1.233,2.75-2.75V7.254c0-.552-.265-1.078-.708-1.406Zm-3.542,4.652h-1.5c-.414,0-.75-.336-.75-.75s.336-.75,.75-.75h1.5c.414,0,.75,.336,.75,.75s-.336,.75-.75,.75Z" fill="#212121"></path></g></svg>
         <p class="lg:hidden">Inicio</p>
       </a>
 
