--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -1,6 +1,16 @@
 ---
-import {Image} from "astro:assets"
+import { Image } from "astro:assets";
+import SideItem from "./SideItem.astro";
+import CodeIcon from "../assets/system-solid-34-code.json";
 ---
+
+<script>
+  import lottie from "lottie-web";
+  import { defineElement } from "@lordicon/element";
+
+  // define "lord-icon" custom element with default properties
+  defineElement(lottie.loadAnimation);
+</script>
 
 <div
   class="drawer-side target:bg-inherit hover:cursor-default hover:bg-inherit"
@@ -32,76 +42,40 @@ import {Image} from "astro:assets"
     <!-- Sidebar content here -->
 
     <!-- Pages -->
-    <div class="flex shrink grow gap-1 flex-col lg:gap-2 text-gray-200">
-      <a
-        rel="prefetch"
-        class="flex gap-2 rounded-2xl py-2 px-1 transition-all hover:bg-neutral lg:rounded-xl lg:hover:scale-105"
-        id="home"
-        href="/"
-      >
-        <svg xmlns="http://www.w3.org/2000/svg" height="18" width="18" viewBox="0 0 18 18"><title>house 5</title><g fill="#212121" class="nc-icon-wrapper"><path d="M13.75,6.019c-.414,0-.75-.336-.75-.75V2.75c0-.414,.336-.75,.75-.75s.75,.336,.75,.75v2.519c0,.414-.336,.75-.75,.75Z" data-color="color-2"></path><path d="M15.792,5.848L9.446,1.147c-.265-.196-.628-.196-.893,0L2.208,5.848c-.444,.329-.708,.854-.708,1.406v6.496c0,1.517,1.233,2.75,2.75,2.75h.75v-5c0-.828,.672-1.5,1.5-1.5s1.5,.672,1.5,1.5v5h5.75c1.517,0,2.75-1.233,2.75-2.75V7.254c0-.552-.265-1.078-.708-1.406Zm-3.542,4.652h-1.5c-.414,0-.75-.336-.75-.75s.336-.75,.75-.75h1.5c.414,0,.75,.336,.75,.75s-.336,.75-.75,.75Z" fill="#212121"></path></g></svg>
-        <p class="lg:hidden">Inicio</p>
-      </a>
-
-      <a
-        rel="prefetch"
-        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
-        id="projects"
-        href="/projects"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
+    <div
+      class="flex md:items-center md:justify-center shrink grow gap-1 flex-col lg:gap-2 text-gray-200"
+    >
+      <SideItem id="home" label="home" href="/">
+        <lord-icon
+          colors="primary:#d4d4d4"
+          src="/icons/system-solid-41-home.json"
+          trigger="hover"
         >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path d="M10 14l-2 -2l2 -2"></path>
-          <path d="M14 10l2 2l-2 2"></path>
-          <path d="M12 12m-9 0a9 9 0 1 0 18 0a9 9 0 1 0 -18 0"></path>
-        </svg>
-        <p class="lg:hidden">Proyectos</p>
-      </a>
+        </lord-icon>
+      </SideItem>
 
-      <a
-        rel="prefetch"
-        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
-        id="blog"
-        href="/blog"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
+      <SideItem id="projects" label="Proyectos" href="/projects">
+        <lord-icon
+          colors="primary:#d4d4d4"
+          src="/icons/system-solid-34-code.json"
+          trigger="hover"
         >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path
-            d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z"
-          ></path>
-          <path d="M7 8h10"></path>
-          <path d="M7 12h10"></path>
-          <path d="M7 16h10"></path>
-        </svg>
-        <p class="lg:hidden">Blog</p>
-      </a>
+        </lord-icon>
+      </SideItem>
+
+      <SideItem id="blog" label="Proyectos" href="/blog">
+        <lord-icon
+          colors="primary:#d4d4d4"
+          src="/icons/system-solid-14-article.json"
+          trigger="hover"
+        >
+        </lord-icon>
+      </SideItem>
 
       <div class="hidden">
         <a
           rel="prefetch"
-          class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
+          class="flex gap-2 md:justify-center rounded-2xl py-2 px-1 transition-all fill-neutral-300 hover:bg-neutral lg:rounded-xl lg:hover:scale-105"
           id="cv"
           href="/cv"
         >
@@ -125,91 +99,51 @@ import {Image} from "astro:assets"
         </a>
       </div>
 
-      <a
-        rel="prefetch"
-        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
-        id="support"
-        href="/support"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
+      <SideItem id="support" label="Apóyame" href="/support">
+        <lord-icon
+          colors="primary:#d4d4d4"
+          src="/icons/system-solid-68-savings.json"
+          trigger="hover"
         >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path
-            d="M3 14c.83 .642 2.077 1.017 3.5 1c1.423 .017 2.67 -.358 3.5 -1c.83 -.642 2.077 -1.017 3.5 -1c1.423 -.017 2.67 .358 3.5 1"
-          ></path>
-          <path d="M8 3a2.4 2.4 0 0 0 -1 2a2.4 2.4 0 0 0 1 2"></path>
-          <path d="M12 3a2.4 2.4 0 0 0 -1 2a2.4 2.4 0 0 0 1 2"></path>
-          <path d="M3 10h14v5a6 6 0 0 1 -6 6h-2a6 6 0 0 1 -6 -6v-5z"></path>
-          <path d="M16.746 16.726a3 3 0 1 0 .252 -5.555"></path>
-        </svg>
-        <p class="lg:hidden">Apóyame</p>
-      </a>
+        </lord-icon>
+      </SideItem>
 
-      <a
-        class="flex gap-2 rounded-2xl p-4 transition-all hover:bg-neutral lg:rounded-3xl lg:hover:scale-105"
+      <SideItem
+        id="contact"
+        label="Contacto"
         href="mailto:yossthedev@gmail.com"
       >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-home-2 lg:mx-auto"
-          width="24"
-          height="24"
-          viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
+        <lord-icon
+          colors="primary:#d4d4d4"
+          src="/icons/system-solid-59-email.json"
+          trigger="hover"
         >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path
-            d="M3 7a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v10a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2v-10z"
-          ></path>
-          <path d="M3 7l9 6l9 -6"></path>
-        </svg>
-        <p class="lg:hidden">Contacto</p>
-      </a>
+        </lord-icon>
+      </SideItem>
     </div>
 
     <div class="mx-auto my-3 h-1 w-1 rounded-full bg-gray-600/10 p-1"></div>
 
     <!-- Social Networks -->
     <div
-      class="social-icons my-2 flex gap-2 self-center px-2 text-gray-400 lg:flex-col lg:gap-3 lg:px-0"
+      class="social-icons my-2 items-center flex gap-2 self-center px-2 lg:flex-col lg:gap-3 lg:px-0"
     >
       <!-- Telegram  -->
       <a
         href="https:/t.me/yossthedev"
         target="_blank"
-        class="mx-3 lg:mx-auto hover:text-white hover:bg-[#269FDA] rounded-full p-2 hover:scale-105 transition-all"
+        class="mx-3 lg:mx-auto hover:text-white h-8 w-8 hover:bg-[#269FDA] rounded-full p-2 hover:scale-105 transition-all"
         aria-label="Telegram"
         title="Telegram"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-brand-telegram"
-          width="18"
-          height="18"
-          viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
+          fill="currentColor"
+          viewBox="0 0 256 256"
+          ><path
+            d="M236.88,26.19a9,9,0,0,0-9.16-1.57L25.06,103.93a14.22,14.22,0,0,0,2.43,27.21L80,141.45V200a15.92,15.92,0,0,0,10,14.83,15.91,15.91,0,0,0,17.51-3.73l25.32-26.26L173,220a15.88,15.88,0,0,0,10.51,4,16.3,16.3,0,0,0,5-.79,15.85,15.85,0,0,0,10.67-11.63L239.77,35A9,9,0,0,0,236.88,26.19ZM183.53,208,100.85,135.5l119-85.29Z"
+          ></path></svg
         >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path d="M15 10l-4 4l6 6l4 -16l-18 7l4 2l2 6l3 -4"></path>
-        </svg>
       </a>
 
       <!-- Github  -->
@@ -222,21 +156,15 @@ import {Image} from "astro:assets"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-brand-github"
           width="18"
           height="18"
           viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
+          fill="currentColor"
+          class="icon icon-tabler icons-tabler-filled icon-tabler-brand-github"
+          ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+            d="M5.315 2.1c.791 -.113 1.9 .145 3.333 .966l.272 .161l.16 .1l.397 -.083a13.3 13.3 0 0 1 4.59 -.08l.456 .08l.396 .083l.161 -.1c1.385 -.84 2.487 -1.17 3.322 -1.148l.164 .008l.147 .017l.076 .014l.05 .011l.144 .047a1 1 0 0 1 .53 .514a5.2 5.2 0 0 1 .397 2.91l-.047 .267l-.046 .196l.123 .163c.574 .795 .93 1.728 1.03 2.707l.023 .295l.007 .272c0 3.855 -1.659 5.883 -4.644 6.68l-.245 .061l-.132 .029l.014 .161l.008 .157l.004 .365l-.002 .213l-.003 3.834a1 1 0 0 1 -.883 .993l-.117 .007h-6a1 1 0 0 1 -.993 -.883l-.007 -.117v-.734c-1.818 .26 -3.03 -.424 -4.11 -1.878l-.535 -.766c-.28 -.396 -.455 -.579 -.589 -.644l-.048 -.019a1 1 0 0 1 .564 -1.918c.642 .188 1.074 .568 1.57 1.239l.538 .769c.76 1.079 1.36 1.459 2.609 1.191l.001 -.678l-.018 -.168a5.03 5.03 0 0 1 -.021 -.824l.017 -.185l.019 -.12l-.108 -.024c-2.976 -.71 -4.703 -2.573 -4.875 -6.139l-.01 -.31l-.004 -.292a5.6 5.6 0 0 1 .908 -3.051l.152 -.222l.122 -.163l-.045 -.196a5.2 5.2 0 0 1 .145 -2.642l.1 -.282l.106 -.253a1 1 0 0 1 .529 -.514l.144 -.047l.154 -.03z"
+          ></path></svg
         >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path
-            d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5"
-          ></path>
-        </svg>
       </a>
 
       <!-- Twitter  -->
@@ -249,58 +177,22 @@ import {Image} from "astro:assets"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-brand-x"
           width="18"
           height="18"
           viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
+          fill="currentColor"
+          class="icon icon-tabler icons-tabler-filled icon-tabler-brand-x"
+          ><path stroke="none" d="M0 0h24v24H0z" fill="none"></path><path
+            d="M8.267 3a1 1 0 0 1 .73 .317l.076 .092l4.274 5.828l5.946 -5.944a1 1 0 0 1 1.497 1.32l-.083 .094l-6.163 6.162l6.262 8.54a1 1 0 0 1 -.697 1.585l-.109 .006h-4.267a1 1 0 0 1 -.73 -.317l-.076 -.092l-4.276 -5.829l-5.944 5.945a1 1 0 0 1 -1.497 -1.32l.083 -.094l6.161 -6.163l-6.26 -8.539a1 1 0 0 1 .697 -1.585l.109 -.006h4.267z"
+          ></path></svg
         >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path d="M4 4l11.733 16h4.267l-11.733 -16z"></path>
-          <path d="M4 20l6.768 -6.768m2.46 -2.46l6.772 -6.772"></path>
-        </svg>
-      </a>
-
-      <!-- LinkedIn  -->
-      <a
-        href="https://www.linkedin.com/in/yossthedev"
-        target="_blank"
-        class="mx-3 lg:mx-auto hidden"
-        aria-label="Linkedin"
-        title="Linkedin"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          class="icon icon-tabler icon-tabler-brand-linkedin"
-          width="18"
-          height="18"
-          viewBox="0 0 24 24"
-          stroke-width="2"
-          stroke="currentColor"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"
-        >
-          <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-          <path
-            d="M4 4m0 2a2 2 0 0 1 2 -2h12a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-12a2 2 0 0 1 -2 -2z"
-          ></path>
-          <path d="M8 11l0 5"></path>
-          <path d="M8 8l0 .01"></path>
-          <path d="M12 16l0 -5"></path>
-          <path d="M16 16v-3a2 2 0 0 0 -4 0"></path>
-        </svg>
       </a>
 
       <!-- RSS Feed  -->
       <a
         href="/rss.xml"
         target="_blank"
-        class="mx-3 lg:mx-auto hover:text-white hover:bg-[#fd8751] rounded-full p-2 hover:scale-105 transition-all"
+        class="hover:text-white hover:bg-[#fd8751] rounded-full p-2 hover:scale-105 transition-all"
         aria-label="RSS Feed"
         title="RSS Feed"
       >
