--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,7 @@ import Header from "../components/Header.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 import SideBar from "../components/SideBar.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../config";
+import NewsCard from "../components/NewsCard.astro";
 
 const {
   image,
@@ -53,7 +54,7 @@ const last_posts = posts.slice(0, 3);
   </head>
 
   <body class="background-texture">
-    <div class="drawer-mobile drawer text-white">
+    <div class="drawer drawer-mobile text-white">
       <input id="my-drawer" type="checkbox" class="drawer-toggle" />
       <div class="drawer-content flex flex-col">
         <Header title={SITE_TITLE} />
@@ -69,10 +70,10 @@ const last_posts = posts.slice(0, 3);
           <!-- Latest Posts -->
           {
             includeNewsBar && (
-              <div class="mx-6 my-6 flex h-fit flex-auto flex-col rounded-3xl bg-base-200 p-2 shadow-2xl lg:mr-2 lg:max-w-[14rem]">
+              <div class="bg mx-6 my-6 flex h-fit flex-auto flex-col  p-2 md:mr-2 md:max-w-[14rem]">
                 <div class="flex flex-col gap-2">
                   <div class="mx-auto">
-                    <div class="mb-2 mt-4 flex w-full gap-2 font-bold text-gray-500 select-none">
+                    <div class="mb-2 mt-4 flex w-full select-none gap-2 font-bold text-gray-500">
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         class="icon icon-tabler icon-tabler-article my-auto"
@@ -99,7 +100,7 @@ const last_posts = posts.slice(0, 3);
                 </div>
                 {last_posts.map((post, index) => (
                   <>
-                    <HorizontalCard
+                    <NewsCard
                       title={post.data.title}
                       img={post.data.heroImage}
                       desc={post.data.description}
