--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -70,32 +70,33 @@ const last_posts = posts.slice(0, 3);
           <!-- Latest Posts -->
           {
             includeNewsBar && (
-              <div class="bg mx-6 my-6 flex h-fit flex-auto flex-col  p-2 md:mr-2 md:max-w-[14rem]">
-                <div class="flex flex-col gap-2">
-                  <div class="mx-auto">
-                    <div class="mb-2 mt-4 flex w-full select-none gap-2 font-bold text-gray-500">
-                      <svg
-                        xmlns="http://www.w3.org/2000/svg"
-                        class="icon icon-tabler icon-tabler-article my-auto"
-                        width="18"
-                        height="18"
-                        viewBox="0 0 24 24"
-                        stroke-width="2"
-                        stroke="currentColor"
-                        fill="none"
-                        stroke-linecap="round"
-                        stroke-linejoin="round"
-                      >
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                        <path d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" />
-                        <path d="M7 8h10" />
-                        <path d="M7 12h10" />
-                        <path d="M7 16h10" />
-                      </svg>
-                      <p class="my-auto text-xs font-bold">
-                        Ùltimas Publicaciones
-                      </p>
-                    </div>
+              <div
+                transition:persist
+                class="bg sticky top-0 m-6 flex h-fit flex-auto flex-col p-2 md:mr-2 md:max-w-[14rem]"
+              >
+                <div class="flex flex-col items-center gap-2">
+                  <div class="mb-4 mt-4 flex w-full select-none items-center justify-center gap-2 font-bold text-gray-500">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="icon icon-tabler icon-tabler-article my-auto"
+                      width="18"
+                      height="18"
+                      viewBox="0 0 24 24"
+                      stroke-width="2"
+                      stroke="currentColor"
+                      fill="none"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    >
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M3 4m0 2a2 2 0 0 1 2 -2h14a2 2 0 0 1 2 2v12a2 2 0 0 1 -2 2h-14a2 2 0 0 1 -2 -2z" />
+                      <path d="M7 8h10" />
+                      <path d="M7 12h10" />
+                      <path d="M7 16h10" />
+                    </svg>
+                    <p class="my-auto text-xs font-bold">
+                      Ùltimas Publicaciones
+                    </p>
                   </div>
                 </div>
                 {last_posts.map((post, index) => (
@@ -110,7 +111,7 @@ const last_posts = posts.slice(0, 3);
                       newsPanel={true}
                     />
                     {index != last_posts.length - 1 && (
-                      <divider class="mx-auto my-2 h-1 w-1 rounded-full bg-gray-600/20 p-1" />
+                      <divider class="mx-auto my-3 h-1 w-1 rounded-full bg-gray-600/20 p-1" />
                     )}
                   </>
                 ))}
