--- a/src/components/HorizontalShopItem.astro
+++ b/src/components/HorizontalShopItem.astro
@@ -12,34 +12,36 @@ const {
   custom_link = false,
   custom_link_label = "",
 } = Astro.props;
-import {Image} from "astro:assets"
+import { Image } from "astro:assets";
 ---
 
-<div class="rounded-lg bg-base-100 hover:shadow-xl transition ease-in-out hover:scale-[102%]">
+<div
+  class="rounded-lg bg-base-100 transition ease-in-out hover:scale-[102%] hover:shadow-xl"
+>
   <a href={url}>
     <div class="hero-content flex-col md:flex-row">
       {
         img && (
           <Image
-            aspectRatio="16:9"
+            height={400}
             width={750}
             format="webp"
             src={img}
             alt={title}
-            class="max-w-full md:max-w-[13rem] rounded-lg"
+            class="max-w-full rounded-lg md:max-w-[13rem]"
           />
         )
       }
-      <div class="grow w-full p-5 md:p-0">
+      <div class="w-full grow p-5 md:p-0">
         <h1 class="text-xl font-bold">
           {title}
           {badge && <div class="badge badge-secondary mx-2">{badge}</div>}
         </h1>
         <div>
-          <span class="text-xl mr-1"> {pricing}</span>
-          <span class="text-md opacity-50 line-through">{oldPricing}</span>
+          <span class="mr-1 text-xl"> {pricing}</span>
+          <span class="text-md line-through opacity-50">{oldPricing}</span>
         </div>
-        <p class="py-1 text-1xl">{desc}</p>
+        <p class="text-1xl py-1">{desc}</p>
       </div>
     </div>
   </a>
