--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -42,7 +42,7 @@ import SideItem from "./SideItem.astro";
 
     <!-- Pages -->
     <div
-      class="flex shrink grow flex-col gap-1 text-gray-200 md:items-center md:justify-center lg:gap-2"
+      class="flex shrink grow flex-col gap-2 text-neutral-300 md:items-center md:justify-center lg:gap-2"
     >
       <SideItem id="home" label="home" href="/">
         <lord-icon
