--- a/src/components/SideItem.astro
+++ b/src/components/SideItem.astro
@@ -4,7 +4,7 @@ const { id, href, label } = Astro.props;
 
 <a
   rel="prefetch"
-  class="side-item flex gap-2 w-10 h-10 md:justify-center rounded-2xl p-2 transition-all fill-neutral-300 hover:bg-neutral lg:rounded-xl lg:hover:scale-105"
+  class="flex items-center gap-2 rounded fill-neutral-300 p-2 transition-all hover:bg-neutral md:h-10 md:w-10 md:justify-center md:rounded-2xl lg:rounded-xl lg:hover:scale-105"
   id={id}
   href={href}
 >
