--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,7 +11,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
       class="hero-gradient relative mb-64 flex max-h-80 -skew-y-3 skew-x-2 rounded-3xl p-2 shadow-inner lg:mb-40 lg:pb-10 lg:pl-10 lg:pt-10 lg:shadow-xl lg:shadow-primary/10"
     >
       <div
-        class="flex h-[36rem] max-h-[38rem] flex-auto -skew-x-1 skew-y-1 select-none flex-col overflow-hidden rounded-3xl border-4 border-base-300/80 bg-base-200/95 bg-no-repeat p-8 shadow-xl backdrop-blur-3xl transition-all lg:h-96 lg:-skew-y-1 lg:skew-x-1 lg:flex-row portrait:shadow-xl portrait:shadow-primary"
+        class="flex h-[36rem] max-h-[38rem] flex-auto -skew-x-1 skew-y-1 select-none flex-col overflow-hidden rounded-3xl border-4 border-base-300/80 bg-base-200 bg-opacity-90 bg-no-repeat p-8 shadow-xl backdrop-blur-3xl transition-all lg:h-96 lg:-skew-y-1 lg:skew-x-1 lg:flex-row portrait:shadow-xl portrait:shadow-primary"
       >
         <!-- Hero Text -->
         <div class="order-2 flex h-fit flex-auto flex-col lg:order-1 lg:h-full">
