--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,9 +1,9 @@
 <div
-  class="sticky top-0 z-30 flex h-16 w-full justify-center bg-base-100 bg-opacity-90 text-base-content shadow-sm backdrop-blur transition-all duration-100 lg:hidden"
+  class="sticky top-0 z-30 flex h-16 w-full justify-center border-b-2 border-base-200 bg-[#0d0c0d] bg-opacity-90 text-base-content shadow-sm backdrop-blur-xl transition-all duration-100 lg:hidden"
 >
   <div class="navbar">
     <div class="navbar-start">
-      <label for="my-drawer" class="btn-ghost btn-square btn">
+      <label for="my-drawer" class="btn btn-square btn-ghost">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -18,8 +18,8 @@
       </label>
     </div>
     <div class="navbar-center">
-      <p class="poppins-bold btn-ghost btn text-xl normal-case text-gray-200">
-        Y O S S
+      <p class="poppins-bold btn btn-ghost text-xl normal-case text-gray-200">
+        {"<Y O S S 🚀/>"}
       </p>
     </div>
     <div class="navbar-end"></div>
